# _testingbed

./: package-lock.json  package.json
.github/actions/build-qtcli/: action.yml
.github/workflows/: test-qtcli-all.yml
common/: .eslintrc.cjs
doc/src/how-to/: vscodeext-how-to-create-files.qdoc  vscodeext-how-to-create-projects.qdoc  vscodeext-how-to-debug-apps-qml.qdoc  vscodeext-how-to-debug-apps.qdoc
doc/src/tutorials/: vscodeext-tutorials-qt-widgets.qdoc
qt-cli/: .gitignore  run.sh
qt-cli/src/: go.mod  go.sum
qt-cli/src/assets/templates/projects/cpp/console/: CMakeLists.txt  main.cpp  prompt.yml  templates.yml
qt-cli/src/assets/templates/projects/cpp/qwidget/: CMakeLists.txt  main.cpp  mainwindow.cpp  prompt.yml  templates.yml
qt-cli/src/cmds/: new_cmd.go  preset_cmd.go  server_cmd.go
qt-cli/src/common/: common.go  error.go  input_validator.go  preset.go  preset_manager.go  prompt_file.go  target_type.go  template_file.go  texts.go  user_preset_file.go  validation_helper.go  validation_helper_test.go  validator.go
qt-cli/src/formats/: template_file.go  user_preset_file.go
qt-cli/src/generator/: api.go  api_cpp.go  api_global.go  checker.go  generator.go  result.go  validator.go
qt-cli/src/runner/: default_preset.go  runner.go  text_ui.go
qt-cli/src/server/: api.http  common.go  handler_get.go  handler_others.go  handler_post.go  handlers.go  (+4 more)
qt-core/: CHANGELOG.md  ThirdPartyNotices.txt  package-lock.json  package.json  package.nls.json
qt-core/src/: extension.ts  installation-root.ts  project.ts
qt-core/webview-ui/: README.md  ThirdPartyNotices.txt  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
qt-cpp/: CHANGELOG.md  ThirdPartyNotices.txt  package-lock.json  package.json
qt-cpp/src/: kit-manager.ts
qt-lib/: package-lock.json  package.json
qt-qml/: CHANGELOG.md  ThirdPartyNotices.txt  package-lock.json  package.json  package.nls.json
qt-qml/src/: qmlls.ts
qt-ui/: CHANGELOG.md  package-lock.json  package.json
qt-ui/src/: project.ts
scripts/: all_dev.ts  generate_licenses.ts  publish.ts
(+130 files in other folders)
